# gha_cmake_intel_cpp17

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: check_build.yml
misc/: CMakeLists.txt  README.md
scripts/: build.sh  build_rackham.sh
